# personal_website

./: .dockerignore  CHATBOT_SETUP.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  UV_SETUP.md  chatbot_api.py  docker-compose.yml  env.template  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  resume_conversation.ipynb  tatus
public/: index.html
resume/: summary.txt
src/: App.js
src/assets/configs/: blogConfig.js  footerConfig.js  homeConfig.js  menuConfig.js  projectConfig.js  skillsConfig.js
src/components/: About.js  Chatbot.jsx  Hero.jsx
src/components/Footer/: Footer.js
src/components/NavBar/: LanguageSwitch.jsx
src/pages/: Blogs.jsx  Chatbot.jsx  Projects.jsx
src/pages/Home/: Home.js
src/pages/Skills/: Skills.js  SkillsItems.js
src/utils/: i18n.js
