[project]
name = "hassan-portfolio-chatbot"
version = "1.0.0"
description = "AI-powered chatbot for Hassan Iftikhar's portfolio website"
authors = [
    {name = "Hassan Iftikhar", email = "hassaniftikhar62@gmail.com"}
]
requires-python = ">=3.8.1"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "httpx==0.24.1",
    "requests==2.31.0",
    "pypdf==3.17.1",
    "pydantic==2.5.0",
]
